--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-cache/
+# folders
 extracted-data/
-extracted-data.zip
 processed-data/
-test*
+# big files
+extracted-data.zip
+images.npz
+# python files
+dataset_analysis.py
 load_images.py
 resize_images.py
-images.npz
+# test files
+test*
